<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_sleep_layou"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityMarginStyle">
    <LinearLayout
        android:id="@+id/sleep_fragment_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        style="@style/ActivityMarginStyle">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="您好!"
            android:textSize="60dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/sleep_fragment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="姓名"
            android:textSize="35dp"
            android:gravity="right"
            android:layout_marginRight="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/sleep_lay_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sleep_fragment_row1"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        style="@style/ActivityMarginStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_sleep_str"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:id="@+id/sleep_tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:layout_marginRight="@dimen/element_horizontal_margin"
            android:textSize="@dimen/text_size_large"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sleep_lay_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_below="@id/sleep_lay_time"
        android:orientation="horizontal"
        style="@style/ActivityMarginStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_water_str"
            android:textSize="@dimen/text_size_large"/>

        <EditText
            android:id="@+id/water_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:layout_marginRight="@dimen/element_horizontal_margin"
            android:textSize="@dimen/text_size_large"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bei"
            android:textSize="@dimen/text_size_large"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sleep_btn_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/sleep_lay_water"
        android:orientation="horizontal"
        style="@style/ActivityMarginStyle">

        <Button
            android:id="@+id/water_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_water_str"
            android:textSize="@dimen/text_size_large"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tar_lay_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/sleep_btn_water"
        android:orientation="horizontal"
        style="@style/ActivityMarginStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_water_str"
            android:textSize="@dimen/text_size_large"/>

        <TextView
            android:id="@+id/water_tv_tar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0"
            android:layout_marginRight="@dimen/element_horizontal_margin"
            android:textSize="@dimen/text_size_large"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tar_btn_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tar_lay_water"
        android:orientation="horizontal"
        style="@style/ActivityMarginStyle">

        <Button
            android:id="@+id/water_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_str"
            android:textSize="@dimen/text_size_large"/>
    </LinearLayout>


</RelativeLayout>